--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,12 @@ nav h3 {
     font-weight: lighter;
 }
 
-a {
+nav a {
     text-decoration: none;
     color: white;
 }
 
-a h3:hover {
+nav a:hover {
     color: #00539E;
 }
 
